--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-    /* .title-text{
-      @apply  text-center animate-text text-3xl md:text-4xl lg:text-5xl bg-gradient-to-r from-amber-500 via-orange-500 to-yellow-400 bg-clip-text text-transparent font-black
-    } */
-  
+.btn-primary{
+  @apply  font-semibold  transition duration-200  shadow-md  md:mb-0  px-4 py-2 md:px-8 md:py-3 m-2 text-lg rounded-full border-transparent border-2 hover:border-orange-500  text-slate-500  bg-yellow-300 hover:bg-yellow-400
+}
+    @layer utilities{
+      .title-text{
+        @apply  text-center text-3xl md:text-4xl lg:text-5xl bg-gradient-to-r from-amber-400 via-orange-400 to-yellow-400 bg-clip-text text-transparent font-extrabold my-2 mb-4 md:my-4 lg:my-8
+      }
+    }
